fixing SEO link

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Welcome to TL-Verilog Learning</h1>
-    <p>Repository: <a href="https://gitlab.com/Makerchip-public">View on GitLab</a></p>
+    <p>Repository: <a href="https://gitlab.com/rweda/Makerchip-public">View on GitLab</a></p>
 </body>
 </html>
