Changes to pane-blade for Bootstrap. Copyright transfer from Steve to Redwood.

--- a/sandpiper-golden-regression/bank/bank.m4out.html
+++ b/sandpiper-golden-regression/bank/bank.m4out.html
@@ -17,8 +17,8 @@
 
 <style>
 /*
-Copyright (c) 2015, Steven F. Hoover
-All rights reserved.
+Copyright (c) Redwood EDA, LLC
+See accompanying LICENSE file for details.
 */
 .tlv_ident_error {
   color: red;
