--- a/sandpiper-golden-regression/grid_network/design.m4out.html
+++ b/sandpiper-golden-regression/grid_network/design.m4out.html
@@ -17,8 +17,8 @@
 
 <style>
 /*
-Copyright (c) 2015, Steven F. Hoover
-All rights reserved.
+Copyright (c) Redwood EDA, LLC
+See accompanying LICENSE file for details.
 */
 .tlv_ident_error {
   color: red;
